--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
@@ -8,7 +7,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.2.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
     <groupId>com.example</groupId>
     <artifactId>Online_school</artifactId>
@@ -18,6 +17,14 @@
     <properties>
         <java.version>17</java.version>
     </properties>
+
+<!--    <repositories>-->
+<!--        <repository>-->
+<!--            <id>sonatype-oss</id>-->
+<!--            <name>Sonatype OSS Repository</name>-->
+<!--            <url>https://oss.sonatype.org/content/repositories/releases/</url>-->
+<!--        </repository>-->
+<!--    </repositories>-->
 
     <dependencies>
 
@@ -43,10 +50,12 @@
             <version>2.5.0</version>
         </dependency>
 
+
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
-            <version>8.3.0</version>
+            <version>8.2.0</version>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
@@ -70,7 +79,7 @@
         <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
-            <version>1.6.14</version>
+            <version>1.5.20</version>
         </dependency>
 
         <dependency>
@@ -114,24 +123,36 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
-            <version>3.2.5</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.github.javafaker</groupId>
-            <artifactId>javafaker</artifactId>
-            <version>1.0.2</version>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>7.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.4.14</version>
+        </dependency>
 
     </dependencies>
 
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -144,12 +165,13 @@
                     </excludes>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
             </plugin>
-            <!-- JaCoCo plugin -->
+
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -182,9 +204,9 @@
                         <exclude>com/example/online_school/controller/*</exclude>
                         <exclude>com/example/online_school/dto/*</exclude>
                         <exclude>com/example/online_school/exception/*</exclude>
-                        <exclude>com.example.online_school.handler/*</exclude>
+                        <exclude>com/example/online_school/handler/*</exclude>
                         <exclude>com/example/online_school/exception/errorMessage/*</exclude>
-                        <exclude>com.example.online_school.entity.enums/*</exclude>
+                        <exclude>com/example/online_school/entity/enums/*</exclude>
                         <exclude>com/example/online_school/mapper/*</exclude>
                         <exclude>com/example/online_school/entity/*</exclude>
                         <exclude>com/example/online_school/OnlineSchoolApplication.class</exclude>
