--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8080
 spring:
   main:
     banner-mode: off
@@ -24,5 +24,7 @@ spring:
 #  level:
 #    root: debug
 
-
+logging:
+  level:
+    root: INFO
 
