--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,17 @@
             <artifactId>logback-core</artifactId>
             <version>1.4.14</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback.db</groupId>
+            <artifactId>logback-core-db</artifactId>
+            <version>1.2.11.1</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback.db</groupId>
+            <artifactId>logback-classic-db</artifactId>
+            <version>1.2.11.1</version>
+        </dependency>
+
 
     </dependencies>
 
