--- a/pom.xml
+++ b/pom.xml
@@ -231,7 +231,7 @@
                 <version>4.8.0</version>
                 <configuration>
                     <changeLogFile>src/main/resources/db/changelog/db.changelog-master.xml</changeLogFile>
-                    <url>jdbc:mysql://localhost:3306/online_school</url>
+                    <url>jdbc:mysql://db:3306/online_school</url>
                     <username>root</username>
                     <password>Liubasa1993.</password>
                     <driver>com.mysql.cj.jdbc.Driver</driver>
